[project]
name = "assignment-3-ml-algorithms-kvpmx"
version = "0.1.0"
description = "Maksym Kovpak. Group 501"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
